# openllmtelemetry

./: .bumpversion.cfg  .gitignore  Makefile  README.md  pyproject.toml  test.ipynb
.github/actions/python-build/: action.yml
.github/workflows/: build.yaml
examples/streamlit-app/: .env  README.md  app.py  local.env  requirements.txt
examples/streamlit-app/examples/: system-message.txt
examples/streamlit-app/examples/demo/: 0_prompt_injection_dan.txt  1_prompt_with_pii.txt  2_medical_topic.txt
examples/streamlit-app/examples/output/: 1-refusal.txt  2-pii-response.txt
examples/streamlit-app/examples/prompt/: 1_prompt_injection.txt  2_prompt_injection_dan.txt  4_prompt_injection_CIPHER.txt
llm_traceguard/: __init__.py  instrument.py  intrument_openai.py  version.py
notebooks/: CallingGuardrailsDirectly.ipynb  DetectingInjectionsInRAG.ipynb  Instrumenting_Bedrock.ipynb  Instrumenting_LangGraph.ipynb  Instrumenting_OpenAI.ipynb  quick-test-async.py  quick-test-completion.py  quick-test.py  test.ipynb
notebooks/example_ts/: config.ts  guardrail_api.ts  guardrail_types.ts  guardrails_example.ts  openai_tracing_example.ts  package-lock.json  package.json  trace_exporter.ts  tracing_example.ts  wrap_guard.ts
openllmtelemetry/: __init__.py  config.py  guard.py  instrument.py  instrument_langkit.py  instrumentors.py  intrument_openai.py  secure.py  span_exporter.py  tracer.py  version.py
openllmtelemetry/content_id/: __init__.py
openllmtelemetry/guardrails/: __init__.py  client.py  handlers.py
openllmtelemetry/instrumentation/: LICENSE
openllmtelemetry/instrumentation/bedrock/: __init__.py  reusable_streaming_body.py
openllmtelemetry/instrumentation/decorators/: __init__.py  task.py
openllmtelemetry/instrumentation/openai/: __init__.py  utils.py  version.py
openllmtelemetry/instrumentation/openai/shared/: __init__.py  chat_wrappers.py  completion_wrappers.py  embeddings_wrappers.py
openllmtelemetry/instrumentation/openai/v0/: __init__.py
openllmtelemetry/instrumentation/openai/v1/: __init__.py
openllmtelemetry/instrumentation/watsonx/: __init__.py  config.py  utils.py
openllmtelemetry/semantic_conventions/gen_ai/: __init__.py
tests/: test_guard.py  test_instrument.py
