[tool.poetry]
name = "OpenLLMTelemetry"
version = "0.0.1.b1"
description = "End-to-end observability with built-in security guardrails."
authors = ["WhyLabs.ai <support@whylabs.ai>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-exporter-otlp-proto-http = "^1.22.0"
opentelemetry-instrumentation-requests = "^0.43b0"
openai = {version = ">0.7,<2.0", optional = true}
langkit = {version = ">0.0.29,<0.1.0", optional = true}
vadersentiment = {version = "^3.3.2", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
flake8 = { version = "^6.1.0", python = ">=3.8.1,<4" }
pre-commit = "^3.5.0"
mypy = "^1.7.0"
ipykernel = "^6.27.1"
pyright = "^1.1.352"
ruff = "^0.3.0"
bump2version = "^1.0.1"

[tool.poetry.extras]
openai = [
    "openai"
]
langkit = [
    "langkit",
    "vadersentiment"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["openllmtelemetry", "tests"]
exclude = ["openllmtelemetry/instrumentation"]
typeCheckingMode = "strict"

reportMissingTypeStubs = false
reportMissingParameterType = false
reportMissingTypeArgumet = false

[tool.ruff]
line-length = 160
indent-width = 4
include = ["./llm_traceguard/**/*.py", "./tests/**/*.py"]

[tool.ruff.lint.isort]
known-first-party = ["whylogs", "langkit", "tests"]

[tool.ruff.lint]
fixable = ["ALL"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
